# pytest-checkers

./: README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  create-release.yml  publish.yml  tox-tests.yml
src/pytest_checkers/: __init__.py  checkers.py
tests/: conftest.py  test_behaviour.py  test_interface.py  test_units.py
typesheds/_pytest/: pytester.pyi
